network.tf
####################
# VPC
#Author-Durga Prasad Patra
####################

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_hostnames = true

  enable_dns_support = true

  tags = {

    Name = "${var.project_name}-vpc"

  }

}

####################
# Internet Gateway
####################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

}

####################
# Public Subnet
####################

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidr

  map_public_ip_on_launch = true

}

####################
# Private Subnet
####################

resource "aws_subnet" "private" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_cidr

}

####################
# Public Route Table
#Author-Durga Prasad Patra
####################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

}

resource "aws_route" "internet" {

  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.igw.id

}

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}
